<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.MainActivity">

    <soup.neumorphism.NeumorphTextView


        android:id="@+id/tv_result"
        style="@style/Widget.Neumorph.TextView"
        android:layout_width="397dp"
        android:layout_height="74dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textColor="@color/pink_neon"
        android:textSize="@dimen/_28sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:neumorph_lightSource="rightBottom"
        app:neumorph_shadowElevation="@dimen/_1ssp" />


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/cl_for_buttons"
        android:layout_width="388dp"
        android:layout_height="270dp"

        android:layout_marginTop="32dp"

        android:layout_marginBottom="16dp"
        android:background="@color/background"
        app:layout_constraintBottom_toTopOf="@+id/cl_technical_btns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result">


        <soup.neumorphism.NeumorphButton

            android:id="@+id/btn_add_eight"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/btn_eight_value"

            app:layout_constraintEnd_toStartOf="@+id/btn_add_nine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_add_seven"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_five" />

        <soup.neumorphism.NeumorphButton

            android:id="@+id/btn_add_seven"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/btn_seven_value"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_eight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_four" />

        <soup.neumorphism.NeumorphButton

            android:id="@+id/btn_add_nine"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/btn_nine_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_add_eight"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_six" />

        <soup.neumorphism.NeumorphButton

            android:id="@+id/btn_add_four"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/btn_four_value"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_seven"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_five"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_onee" />

        <soup.neumorphism.NeumorphButton

            android:id="@+id/btn_add_six"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/btn_six_value"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_nine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_add_five"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_threee" />

        <soup.neumorphism.NeumorphButton

            android:id="@+id/btn_add_five"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/btn_five_value"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_eight"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_six"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_add_four"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_twoo" />

        <soup.neumorphism.NeumorphButton

            android:id="@+id/btn_add_twoo"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/btn_two_value"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_five"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_threee"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_add_onee"
            app:layout_constraintTop_toTopOf="parent" />

        <soup.neumorphism.NeumorphButton

            android:id="@+id/btn_add_onee"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/btn_one_value"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_four"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_twoo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <soup.neumorphism.NeumorphButton

            android:id="@+id/btn_add_threee"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/btn_three_value"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_six"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_add_twoo"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <soup.neumorphism.NeumorphButton

        android:id="@+id/btn_addition"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="115dp"
        android:layout_height="57dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_addition"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_result" />

    <soup.neumorphism.NeumorphButton

        android:id="@+id/btn_substract"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="121dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_substract"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_result" />


    <com.jackandphantom.customtogglebutton.CustomToggle

        android:id="@+id/lot_toggle_changer_function"
        android:layout_width="57dp"
        android:layout_height="58dp"

        android:layout_marginStart="20dp"
        app:ctg_addAnimationType="jack_animation"
        app:ctg_addLeftIcon="@drawable/ic_left_icon"
        app:ctg_addRightIcon="@drawable/ic_right_icon"
        app:ctg_addSlideBackgroundColor="#6c817a"


        app:ctg_addSlideColor="#ff67"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toEndOf="@+id/btn_substract"
        app:layout_constraintTop_toBottomOf="@+id/tv_result"
        app:layout_constraintVertical_bias="0.846" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/cl_technical_btns"
        android:layout_width="411dp"
        android:layout_height="121dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.spark.submitbutton.SubmitButton
            android:id="@+id/btn_clear"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@color/background"
            android:text="@string/btn_clear"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.spark.submitbutton.SubmitButton
            android:id="@+id/btn_equals"
            style="@style/Widget.Neumorph.Button"

            android:layout_width="110dp"
            android:layout_height="60dp"
            android:background="@color/background"
            android:text="@string/equals"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="144dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="162dp" />


</androidx.constraintlayout.widget.ConstraintLayout>